--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-first-app",
-  "version": "0.0.0",
+  "name": "directives-play",
+  "version": "1.1.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
